Change image refs to S3 to fix griffin load issues

--- a/2015-year-in-review/index.html
+++ b/2015-year-in-review/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <a href="http://www.thedp.com/">
-    <img src="img/hero.png" class="img img-responsive" />
+    <img src="https://s3.amazonaws.com/media.dpn/49258_heroo.png" class="img img-responsive" />
   </a>
   <div class="container">
     <div class="row">
@@ -21,7 +21,7 @@
         <div class="timeline-badge"><i class="fa fa-university"></i></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <img src="img/DNC.jpg" class="img img-responsive fade-caption" />
+            <img src="https://s3.amazonaws.com/media.dpn/49260_dnco.jpg" class="img img-responsive fade-caption" />
             <h4 class="timeline-title">DNC Announcement</h4>
             <p>
               <small class="text-muted"><i class="glyphicon glyphicon-calendar"></i> February 2</small>
@@ -38,7 +38,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <div class="fade-caption">
-              <img src="img/mentalhealth.jpg" class="img img-responsive" />
+              <img src="https://s3.amazonaws.com/media.dpn/49255_mentalhealtho.jpg" class="img img-responsive" />
             </div>
             <h4 class="timeline-title">Mental Health Task Force Released Recommendations</h4>
             <p>
@@ -57,7 +57,7 @@
         <div class="timeline-badge"><i class="fa fa-futbol-o"></i></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <img src="img/SteveDonahue.jpg" class="img img-responsive fade-caption" />
+            <img src="https://s3.amazonaws.com/media.dpn/49264_stevedonahueo.jpg" class="img img-responsive fade-caption" />
             <h4 class="timeline-title">Steve Donahue Announced as Jerome Allen's Replacement</h4>
             <p>
               <small class="text-muted"><i class="glyphicon glyphicon-calendar"></i> March 7</small>
@@ -72,7 +72,7 @@
         <div class="timeline-badge"><i class="fa fa-university"></i></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <img src="img/FossilFuel.jpg" class="img img-responsive fade-caption" />
+            <img src="https://s3.amazonaws.com/media.dpn/49257_fossilfuelo.jpg" class="img img-responsive fade-caption" />
             <h4 class="timeline-title">Undergraduates Vote to Divest From Fossil Fuels</h4>
             <p>
               <small class="text-muted"><i class="glyphicon glyphicon-calendar"></i> March 27</small>
@@ -89,7 +89,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <div class="fade-caption">
-              <img src="img/AXO.jpg" class="img img-responsive fade-caption" />
+              <img src="https://s3.amazonaws.com/media.dpn/49254_axoo.jpg" class="img img-responsive fade-caption" />
             </div>
             <h4 class="timeline-title">Greek Life Goes Off Campus</h4>
             <p>
@@ -107,7 +107,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <div class="fade-caption">
-              <img src="img/Protest.jpg" class="img img-responsive fade-caption" />
+              <img src="https://s3.amazonaws.com/media.dpn/49263_protesto.jpg" class="img img-responsive fade-caption" />
             </div>
             <h4 class="timeline-title">Protests Proliferated</h4>
             <p>
@@ -126,7 +126,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <div class="fade-caption">
-              <img src="img/mattis.jpg" class="img img-responsive fade-caption" />
+              <img src="https://s3.amazonaws.com/media.dpn/49256_mattiso.jpg" class="img img-responsive fade-caption" />
             </div>
             <h4 class="timeline-title">Sam Mattis Wins NCAA Championship in Discus for Penn Track</h4>
             <p>
@@ -143,7 +143,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <div class="fade-caption">
-              <img src="img/SexualAssult.jpg" class="img img-responsive fade-caption" />
+              <img src="https://s3.amazonaws.com/media.dpn/49259_sexualassulto.jpg" class="img img-responsive fade-caption" />
             </div>
             <h4 class="timeline-title">Sexual climate survey revealed ‘deeply troubling’ results</h4>
             <p>
@@ -162,7 +162,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <div class="fade-caption">
-              <img src="img/Pope.jpg" class="img img-responsive fade-caption" />
+              <img src="https://s3.amazonaws.com/media.dpn/49265_popeo.jpg" class="img img-responsive fade-caption" />
             </div>
             <h4 class="timeline-title">The Pope Came to Philly</h4>
             <p>
@@ -179,7 +179,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <div class="fade-caption">
-              <img src="img/threat.jpg" class="img img-responsive fade-caption" />
+              <img src="https://s3.amazonaws.com/media.dpn/49261_threato.jpg" class="img img-responsive fade-caption" />
             </div>
             <h4 class="timeline-title">Threat of violence disrupts classes</h4>
             <p>
@@ -198,7 +198,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <div class="fade-caption">
-              <img src="img/Football.jpg" class="img img-responsive fade-caption" />
+              <img src="https://s3.amazonaws.com/media.dpn/49262_footballo.jpg" class="img img-responsive fade-caption" />
             </div>
             <h4 class="timeline-title">Penn Football Wins Share of 17th Ivy League Title</h4>
             <p>
