--- a/test/index.html
+++ b/test/index.html
@@ -11,5 +11,6 @@
     <p>
       Testing testing 123...
     </p>
+    <img src="https://s3.amazonaws.com/media.dpn/50674_nyancatf.png" alt="Nyan Cat" />
   </body>
 </html>
