New rate card added

--- a/advertising/index.html
+++ b/advertising/index.html
@@ -4,10 +4,13 @@
 <head>
     <meta charset="utf-8">
     <title>Advertise | The Daily Pennsylvanian</title>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
+    <script src="js/script.js" charset="utf-8"></script>
 
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/master.css">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/skeleton.css">
+    <link rel="stylesheet" href="/css/master.css">
 
 </head>
 
@@ -71,7 +74,7 @@
                 <div class="nine columns dp-text-1">
                     <h1>The Best Way to Reach Penn</h1>
                     <h6>
-                      <a href="https://s3.amazonaws.com/media.dpn/46668_dp20152016_ratebooko.pdf">
+                      <a href="https://s3.amazonaws.com/media.dpn/52796_dp_ratecard_201617o.pdf">
                         <span class="fa fa-arrow-down"></span> Download our Rate Card <i>(PDF, 1.7mb)</i>
                       </a>
                     </h6>
@@ -1062,9 +1065,6 @@
     </footer>
 
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
-    <script src="js/script.js" charset="utf-8"></script>
-
 </body>
 
 </html>
