--- a/advertising/index.html
+++ b/advertising/index.html
@@ -147,7 +147,7 @@
 
                     <h3>Readership</h3>
                     <ul>
-                        <li><b><h3 class="inline text-highlight">23,144</h3> Penn students, faculty, and staff</b> read The Daily Pennsylvanian weekly. 7,000 copies of the newspaper are distributed daily</li>
+                        <li><b><h3 class="inline text-highlight">23,144</h3> Penn students, faculty, and staff</b> read The Daily Pennsylvanian weekly. 6,000 copies of the newspaper are distributed daily</li>
                         <li>The Daily Pennsylvanian is published <b>Monday through Thursday mornings</b> when Penn classes are in session, 116 days each year.</li>
                         <li><b>Distributed free at <h3 class="inline text-highlight">80+</h3></b> campus-area high-traffi c locations such as dorms, dining halls, libraries, classrooms, and administrative buildings.</li>
                     </ul>
@@ -156,7 +156,7 @@
                     <p>Spring 2014 and 2015 market research studies of college students nationally, and of Penn students and faculty/staff locally, show: </p>
                     <ul>
                         <li>76% of Penn undergraduates, and more than 50% of Penn community members, read the newspaper at least once a week.</li>
-                        <li>The University of Pennsylvania is Philadelphia’s largest non-government employer — and more than 7,000 members of Penn’s faculty and staff read the newspaper each week.</li>
+                        <li>The University of Pennsylvania is Philadelphia’s largest non-government employer — and more than 6,000 members of Penn’s faculty and staff read the newspaper each week.</li>
                         <li>DP readers travel to Center City more than 100,000 times per month.</li>
                         <li>Every year, DP readers spend $22 million on clothing, $8 million on computers and software-related products, $775,000 on salon services, and $4.5 million on furniture.</li>
                         <li>Student DP readers’ monthly discretionary spending is $250 — 27% more than the national college student average of $197.</li>
@@ -225,9 +225,9 @@
                 <img src="img/dpweb.png" class="img-responsive shaddow"/>
             </div>
             <div class="nine columns push-left">
-                <h3>www.thedp.com</h3>
+                <h3>www.TheDP.com</h3>
                 <p>
-                    TheDP.com and its related websites contain the full editorial content of each day’s Daily Pennsylvanian, each 34th Street Magazine (34st.com), PDF versions of both publications’ print editions (including all the ads), plus content available exclusively online. For students, the most popular section of our website is UnderTheButton.com, an online-only campus lifestyle blog that is Penn’s 24/7 source for local news, gossip and entertainment. Another blog, The Buzz, off ers in-depth coverage of Penn sports. TheDP.com also provides multimedia videos and photo slideshows, Penn-related links from around the web, more than two decades of archived articles, breaking news updates, reader feedback, as well as Facebook and Twitter links. Online readers — students, faculty/ staff and many Penn parents and alumni — view more than 800,000 web pages each month on theDP.com on their phones, computers, and other mobile devices.
+                    TheDP.com and its related websites contain the full editorial content of each day’s Daily Pennsylvanian, each 34th Street Magazine (34st.com), PDF versions of both publications’ print editions (including all the ads), plus content available exclusively online. For students, the most popular section of our website is UnderTheButton.com, an online-only campus lifestyle blog that is Penn’s 24/7 source for local news, gossip and entertainment. TheDP.com also provides multimedia videos and photo slideshows, Penn-related links from around the web, more than two decades of archived articles, breaking news updates, reader feedback, as well as Facebook and Twitter links. Online readers — students, faculty/ staff and many Penn parents and alumni — view hundreds of thousandands of web pages each month on theDP.com on their phones, computers, and other mobile devices.
                 </p>
             </div>
         </div>
@@ -249,20 +249,28 @@
           </div>
             <div class="nine columns push-left">
                 <h3>Under The Button</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
             </div>
         </div>
         <div class="row">
             <div class="nine columns">
                 <h3 style="padding-top: 15px">The Summer Pennsylvanian</h3>
                 <p>
-                    There are nearly 10,000 students, administrators, faculty, and staff who remain on Penn’s campus during the summer, working and/or participating in classes. The Summer Pennsylvanian, with a circulation of 4,000 copies distributed free on Th ursdays at approximately 45 campus-area locations, helps them beat the Philadelphia heat. As the only weekly campus publication during the summer session, The Summer Pennsylvanian off ers coverage of campus news and events, plus a weekly guide to Philadelphia’s summer entertainment scene.
+                    There are nearly 10,000 students, administrators, faculty, and staff who remain on Penn’s campus during the summer, working and/or participating in classes. The Summer Pennsylvanian, with a circulation of 3,000 copies distributed free on Th ursdays at approximately 45 campus-area locations, helps them beat the Philadelphia heat. As the only weekly campus publication during the summer session, The Summer Pennsylvanian off ers coverage of campus news and events, plus a weekly guide to Philadelphia’s summer entertainment scene.
                 </p>
             </div>
             <div class="three columns">
                 <img src="img/summerpenn.jpg" class="img-responsive shaddow"/>
+            </div>
+        </div>
+        <div class="row">
+          <div class="three columns">
+              <!-- <img src="img/utb.png" class="img-responsive shaddow"/> -->
+          </div>
+            <div class="nine columns push-left">
+                <h3>Summer at Penn</h3>
+                <p>
+                  Penn hosts summer programs for students from high school through graduate school, running from two weeks to more than two months. <i>Summer At Penn</i>, with a circulation of <b>7,000</b> copies, is a visitor’s guide magazine that covers everything Penn’s sum- mer program attendees need to know about getting around campus and life in University City. It highlights topics such as where to eat on campus and can’t-miss events in University City and downtown.
+                </p>
             </div>
         </div>
     </section>
@@ -322,10 +330,10 @@
                     <li> <b>By Email:</b> advertising@theDP.com <br>
                         Compose a message which includes:
                         <ul>
-                            <li>your name, address, phone number/li>
-                            <li> description of what you are submitting</li>
-                            <li> the size of the ad you want</li>
-                            <li> the date(s) you want the ad to run.</li>
+                            <li>your name, address, phone number</li>
+                            <li>description of what you are submitting</li>
+                            <li>the size of the ad you want</li>
+                            <li>the date(s) you want the ad to run.</li>
                         </ul>
                     </li>
                     <li>
@@ -534,6 +542,24 @@
                   </tr>
                   </tbody>
                 </table>
+                
+                <h5>Summer At Penn</h5>
+                <table class="u-full-width">
+                  <tbody>
+                    <tr>
+                      <td>Full Page</td>
+                      <td>7.125" x 8.75"</td>
+                  </tr>
+                  <tr>
+                      <td>Half Page</td>
+                      <td>7.125" x 4.75"</td>
+                  </tr>
+                  <tr>
+                      <td>Quarter Page</td>
+                      <td>3.5" x 4.75”</td>
+                  </tr>
+                  </tbody>
+                </table>
 
             </div>
             <div class="three columns">
@@ -604,15 +630,15 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>1-10 column inches</td>
+                            <td>1-12 column inches</td>
                             <td>$50.00</td>
                         </tr>
                         <tr>
-                            <td>11-24 column inches</td>
+                            <td>13-29 column inches</td>
                             <td>$75.00</td>
                         </tr>
                         <tr>
-                            <td>25-60 column inches</td>
+                            <td>30-60 column inches</td>
                             <td>$100.00</td>
                         </tr>
                         <tr>
@@ -776,7 +802,7 @@
                             <td>$75.00</td>
                         </tr>
                         <tr>
-                            <td>2_</td>
+                            <td>2+</td>
                             <td>$65.00</td>
                         </tr>
                     </tbody>
@@ -940,6 +966,45 @@
                 <p>
                     All rates for The Summer Pennsylvanian are lower than school-year rates, due to the smaller press run.
                 </p>
+            </div>
+            <div class="six columns">
+                <table class="u-full-width">
+                    <thead>
+                        <tr>
+                            <th>Type</th>
+                            <th>Rate <small>Per Column Inch</small></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Local Open Rate</td>
+                            <td>$8.70</td>
+                        </tr>
+                        <tr>
+                            <td><small>&nbsp;&nbsp;Penn discount Rate</small></td>
+                            <td>$8.40</td>
+                        </tr>
+                        <tr>
+                            <td><small>&nbsp;&nbsp;5 issue discount Rate</small></td>
+                            <td>$8.30</td>
+                        </tr>
+                        <tr>
+                            <td><small>&nbsp;&nbsp;10 issue discount Rate</small></td>
+                            <td>$7.90</td>
+                        </tr>
+                        </small>
+                        <tr>
+                            <td>National Rate</td>
+                            <td>$10.30</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        
+        <div class="row">
+            <div class="six columns">
+                <h3>Summer At Penn</h3>
             </div>
             <div class="six columns">
                 <table class="u-full-width">
