New thumbnails, move to amazon links

--- a/advertising/index.html
+++ b/advertising/index.html
@@ -166,11 +166,11 @@
                     </ul>
                 </div>
                 <div class="three columns dp-thumbs">
-                    <img src="img/thumbs/dpThumb1.jpeg" class="thumb thumb-1" />
-                    <img src="img/thumbs/dpThumb2.jpeg" class="thumb thumb-2" />
-                    <img src="img/thumbs/dpThumb3.jpeg" class="thumb thumb-3" />
-                    <img src="img/thumbs/dpThumb4.jpeg" class="thumb thumb-4" />
-                    <img src="img/thumbs/dpThumb5.jpeg" class="thumb thumb-5" />
+                  <img src="https://s3.amazonaws.com/media.dpn/52935_dp_ratebook_2p.png" class="thumb thumb-1" />
+                  <img src="https://s3.amazonaws.com/media.dpn/52932_dp_ratebook_3p.png" class="thumb thumb-2" />
+                  <img src="https://s3.amazonaws.com/media.dpn/52931_dp_ratebook_4p.png" class="thumb thumb-3" />
+                  <img src="https://s3.amazonaws.com/media.dpn/52933_dp_ratebook_1p.png" class="thumb thumb-4" />
+                  <img src="https://s3.amazonaws.com/media.dpn/52934_dp_ratebook_5p.png" class="thumb thumb-5" />
                 </div>
             </div>
     </section>
