Summer at penn img

--- a/advertising/index.html
+++ b/advertising/index.html
@@ -264,7 +264,7 @@
         </div>
         <div class="row">
           <div class="three columns">
-              <!-- <img src="img/utb.png" class="img-responsive shaddow"/> -->
+              <img src="https://s3.amazonaws.com/media.dpn/52940_summeratpenncoverp.jpg" class="img-responsive shaddow"/>
           </div>
             <div class="nine columns push-left">
                 <h3>Summer at Penn</h3>
