--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <div class="col-sm-6">
         <h4>Director of Online Projects</h4>
         Andrew Fischer
+        Aspyn Palatnick
       </div>
       <div class="col-sm-6">
         <h4>Development Team</h4>
