--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </div>
       <div class="col-sm-6">
         <h4>Development Team</h4>
+        <h5> NOLAN HILL <h5>
       </div>
     </div>
     
