--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   </head>
   <body>
-    
+
     <div class="container">
       <center>
         <h3>Web Development Team</h3>
@@ -20,12 +20,15 @@
       <div class="col-sm-6">
         <h4>Director of Online Projects</h4>
         Andrew Fischer
+        <h4>Not Director of Online Projects</h4>
+        Mikael Mantis
       </div>
+
       <div class="col-sm-6">
         <h4>Development Team</h4>
       </div>
     </div>
-    
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
