--- a/index.html
+++ b/index.html
@@ -20,17 +20,13 @@
       <div class="col-sm-6">
         <h4>Director of Online Projects</h4>
         Andrew Fischer
-        <h4>Not Director of Online Projects</h4>
-        Mikael Mantis
       </div>
 
       <div class="col-sm-6">
         <h4>Development Team</h4>
-<<<<<<< HEAD
-=======
         <h5> NOLAN HILL <h5>
->>>>>>> 469c14dc0fdc8ad174f0bddb47097463fd5e20f5
         Ming Zhang
+        <h5>Mikael Mantis</h5>
       </div>
     </div>
 
