--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
       <div class="col-sm-6">
         <h4>Director of Online Projects</h4>
         Andrew Fischer
-        Aspyn Palatnick
       </div>
 
       <div class="col-sm-6">
         <h4>Development Team</h4>
-        <h5> NOLAN HILL <h5>
-        Ming Zhang
+        <h5>Nolan Hill</h5>
+        <h5>Ming Zhang</h5>
         <h5>Mikael Mantis</h5>
+        <h5>Aspyn Palatnick</h5>
+        <h5>Alex Graves</h5>
       </div>
     </div>
 
