--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 
       <div class="col-sm-6">
         <h4>Development Team</h4>
-        <h5>Nolan Hill</h5>
-        <h5>Ming Zhang</h5>
-        <h5>Mikael Mantis</h5>
-        <h5>Aspyn Palatnick</h5>
-        <h5>Alex Graves</h5>
+        <ul>
+          <li>Nolan Hill</li>
+          <li>Ming Zhang</li>
+          <li>Mikael Mantis</li>
+          <li>Aspyn Palatnick</li>
+          <li>Alex Graves</li>
+        </ul>
       </div>
     </div>
 
