--- a/index.html
+++ b/index.html
@@ -8,13 +8,23 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css" href="http://d1q35ni5859stt.cloudfront.net/20161213m1eLHQrMRG/dist/css/master.min.css" />
 
+    <!-- Google Analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-707447-4', 'projects.thedp.com');
+      ga('send', 'pageview');
+    </script>
+
     <!-- DFP Ads -->
     <script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
     <script>
       var googletag = googletag || {};
       googletag.cmd = googletag.cmd || [];
     </script>
-
     <script>
       googletag.cmd.push(function() {
         googletag.defineSlot('/12234093/DP.com-mobile-leaderboard', [320, 50], 'div-gpt-ad-1485118541142-0').addService(googletag.pubads());
