--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       .secondary-feature:first-of-type {
         padding-bottom: 40px;
         margin-bottom: 20px;
-        border-bottom: 1px solid #eee;
+        /*border-bottom: 1px solid #eee;*/
       }
 
     </style>
