--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Projects | The Daily Pennsylvanian</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" type="text/css" href="http://d1q35ni5859stt.cloudfront.net/20161213m1eLHQrMRG/dist/css/master.min.css" />
+    <link rel="stylesheet" href="./style.css">
 
     <!-- Google Analytics -->
     <script>
@@ -33,76 +34,6 @@
         googletag.enableServices();
       });
     </script>
-
-    <!-- CSS -->
-    <style media="screen">
-      body {
-        font-family: neuzeit-grotesk, Helvetica, Arial, sans-serif;
-        padding-left: 15px;
-        padding-right: 15px;
-      }
-      a {
-        color: #000;
-      }
-      h1, h2, h3 {
-        margin-top: 0 !important;
-      }
-      nav img {
-        padding-top: 15px;
-      }
-      #featured-secondary {
-        padding-left: 25px;
-        margin-left: 15px;
-        margin-right: -15px;
-        border-left: 1px solid #eee;
-      }
-      .row {
-        margin-bottom: 15px;
-      }
-      .row:first-child {
-        padding-top: 0;
-      }
-      .row.ad {
-        padding-top: 65px;
-      }
-      #articles.row {
-        margin-bottom: 0;
-      }
-      .proj-desc, .pull-left, .pull-right {
-        color: #777;
-      }
-      .proj-section {
-        font-size: 16px;
-        color: #777;
-        text-transform: uppercase;
-        padding-top: 5px;
-        padding-bottom: 0;
-        font-weight: 200;
-      }
-      .img-full {
-        width: 100%;
-      }
-      .secondary-feature:first-of-type {
-        padding-bottom: 40px;
-        margin-bottom: 20px;
-      }
-      .credit {
-        text-align: center;
-      }
-
-      @media screen and (max-width: 768px) {
-        #featured-secondary {
-          border-left: none;
-        }
-      }
-
-      @media screen and (min-width: 768px) {
-        .mobile-only {
-          display: none;
-        }
-      }
-
-    </style>
 
     <!-- Typekit -->
     <script src="https://use.typekit.net/psa2uuo.js"></script>
@@ -171,7 +102,7 @@
       var htmlStr = '';
       if (artIndex === 0) {
         htmlStr =
-          '<div><img src="' + article.image + '" class="img img-responsive img-full"></div>'+
+          '<div><img src="' + article.image + '" class="img img-responsive img-full" alt="' + article.alt + '"></div>'+
           '<div>' +
             '<div class="proj-section">' + article.section + '</div>' +
             '<a href="' + article.link + '">' + '<h1>' + article.title + '</h1></a>' +
@@ -182,7 +113,8 @@
         $('#featured-main').append(htmlStr);
       } else {
         htmlStr =
-          '<div class="secondary-feature"><div><img src="' + article.image + '" class="img img-responsive img-full"></div>'+
+          '<div class="secondary-feature">' +
+            '<div><img src="' + article.image + '" class="img img-responsive img-full" alt="' + article.alt + '"></div>'+
           '<div>' +
             '<div class="proj-section">' + article.section + '</div>' +
             '<a href="' + article.link + '">' + '<h3>' + article.title + '</h3></a>' +
@@ -198,7 +130,9 @@
       var article = data.articles[artIndex];
       var htmlStr =
         '<div class="row">' +
-          '<div class="col-sm-4"><img src="' + article.image + '" class="img img-responsive"></div>'+
+          '<div class="col-sm-4">' +
+            '<img src="' + article.image + '" class="img img-responsive" alt="' + article.alt + '">' +
+          '</div>'+
           '<div class="col-sm-8">' +
             '<div class="proj-section">' + article.section + '</div>' +
             '<a href="' + article.link + '">' + '<h2>' + article.title + '</h2></a>' +
@@ -209,16 +143,6 @@
         '</div>'
       $('#articles').append(htmlStr);
     })
-
-    // var featured = [];
-    // $.each( data, function( key, val ) {
-    //   items.push( "<li id='" + key + "'>" + val + "</li>" );
-    // });
-    //
-    // $( "<ul/>", {
-    //   "class": "my-new-list",
-    //   html: items.join( "" )
-    // }).appendTo( "body" );
   });
   </script>
 </html>
