--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           '<div><img src="' + article.image + '" class="img img-responsive img-full" alt="' + article.alt + '"></div>'+
           '<div>' +
             '<div class="proj-section">' + article.section + '</div>' +
-            '<a href="' + article.link + '">' + '<h1>' + article.title + '</h1></a>' +
+            '<a href="' + article.link + '" target="_blank">' + '<h1>' + article.title + '</h1></a>' +
             '<div class="proj-desc">' + article.description + '</div><br>' +
             '<span class="date pull-left">' + article.date + '</span>' +
             '<span class="author pull-right">' + (article.sponsored ? 'Sponsored by ' + article.author : article.author) + '</span>' +
@@ -117,7 +117,7 @@
             '<div><img src="' + article.image + '" class="img img-responsive img-full" alt="' + article.alt + '"></div>'+
           '<div>' +
             '<div class="proj-section">' + article.section + '</div>' +
-            '<a href="' + article.link + '">' + '<h3>' + article.title + '</h3></a>' +
+            '<a href="' + article.link + '" target="_blank">' + '<h3>' + article.title + '</h3></a>' +
             '<div class="proj-desc">' + article.description + '</div><br>' +
             '<span class="date pull-left">' + article.date + '</span>' +
             '<span class="author pull-right">' + (article.sponsored ? 'Sponsored by ' + article.author : article.author) + '</span>' +
@@ -135,7 +135,7 @@
           '</div>'+
           '<div class="col-sm-8">' +
             '<div class="proj-section">' + article.section + '</div>' +
-            '<a href="' + article.link + '">' + '<h2>' + article.title + '</h2></a>' +
+            '<a href="' + article.link + '" target="_blank">' + '<h2>' + article.title + '</h2></a>' +
             '<div class="proj-desc">' + article.description + '</div><br>' +
             '<span class="date pull-left">' + article.date + '</span>' +
             '<span class="author pull-right">' + (article.sponsored ? 'Sponsored by ' + article.author : article.author) + '</span>' +
