add sports awards 2018 to main page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
 
       <div class="credit">
-        <p>Copyright © 2017 The Daily Pennsylvanian. All Rights Reserved.</p>
+        <p>Copyright &copy; 2016-2018 The Daily Pennsylvanian. All rights reserved.</p>
       </div>
 
     </div>
