fix https issues in main page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Projects | The Daily Pennsylvanian</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" type="text/css" href="http://d1q35ni5859stt.cloudfront.net/20161213m1eLHQrMRG/dist/css/master.min.css" />
+    <link rel="stylesheet" type="text/css" href="https://d1q35ni5859stt.cloudfront.net/20161213m1eLHQrMRG/dist/css/master.min.css" />
     <link rel="stylesheet" href="./style.css">
 
     <!-- Google Analytics -->
