fix all http references for 2017

--- a/clients/cfhs/index.html
+++ b/clients/cfhs/index.html
@@ -14,13 +14,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- Google Fonts -->
-<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900' rel='stylesheet' type='text/css'>
 <!-- Google Fonts -->
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
 <script type="text/javascript">
 jQuery(document).ready(function($) {
-	$(".scroll").click(function(event){		
+	$(".scroll").click(function(event){
 		event.preventDefault();
 		$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
 	});
@@ -122,12 +122,12 @@ jQuery(document).ready(function($) {
 				  			containerID: 'toTop', // fading element id
 							containerHoverID: 'toTopHover', // fading element hover id
 							scrollSpeed: 1200,
-							easingType: 'linear' 
+							easingType: 'linear'
 				 		};
 						*/
-						
+
 						$().UItoTop({ easingType: 'easeOutQuart' });
-						
+
 					});
 				</script>
 		<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
@@ -139,5 +139,3 @@ jQuery(document).ready(function($) {
 
 </body>
 </html>
-
-
