--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <center>
         <a href="http://www.thedp.com">
-          <img src="https://s3.amazonaws.com/media.dpn/56240_dpwordmark750o.png" alt="The Daily Pennsylvainian" width="250">
+          <img src="https://s3.amazonaws.com/media.dpn/56240_dpwordmark750o.png" alt="The Daily Pennsylvanian" width="250">
         </a>
       </center>
     </nav>
