add football preview to projects page

--- a/index.html
+++ b/index.html
@@ -49,10 +49,26 @@
       </center>
     </nav>
 
-    <div class="container">
+    <div class="container wrapper">
 
-      <div class="row ad">
-        <div class="col-xs-12 hidden-xs hidden-sm">
+      <h1>DP Projects &amp; Guides</h1>
+
+      <div class="welcome">
+        Welcome to The Daily Pennsylvanian's Projects page! This site showcases the work done by the DP's web development team, such as project pages for special issues or standalone interactives.
+      </div>
+
+      <hr>
+
+      <div class="row" id="featured">
+        <div class="col-sm-8" id="featured-main"></div>
+        <div class="col-xs-12 mobile-only"><hr class="mobile-only"></div>
+        <div class="col-sm-4" id="featured-secondary"></div>
+      </div>
+
+      <hr>
+
+      <div class="ad">
+        <div class="hidden-xs hidden-sm">
           <!-- /12234093/DP.com-Leaderboard -->
           <div id='div-gpt-ad-1485118541142-1' style='height:90px; width:728px;'>
             <script>
@@ -60,7 +76,7 @@
             </script>
           </div>
         </div>
-        <div class="col-xs-12 hidden-md hidden-lg">
+        <div class="hidden-md hidden-lg">
           <!-- /12234093/DP.com-mobile-leaderboard -->
           <div id='div-gpt-ad-1485118541142-0' style='height:50px; width:320px;'>
             <script>
@@ -68,14 +84,6 @@
             </script>
           </div>
         </div>
-      </div>
-
-      <h1>DP Projects &amp; Guides</h1>
-
-      <div class="row" id="featured">
-        <div class="col-sm-8" id="featured-main"></div>
-        <div class="col-xs-12 mobile-only"><hr class="mobile-only"></div>
-        <div class="col-sm-4" id="featured-secondary"></div>
       </div>
 
       <hr>
