some styling changes

--- a/clients/william-schoepe-properties/index.html
+++ b/clients/william-schoepe-properties/index.html
@@ -11,18 +11,18 @@
       <div class="inner-container">
         <div class="title-box">
           <h1>William Schoepe Properties</h1>
-        </div>
-        <div class="information">
-          <p>Property at 4002 Spruce Street, 7 Bedroom, Available June 1st</p>
-          <p>Contact: Text 215-880-7077</p>
+          <p>4002 Spruce Street</p>
+          <p>7 Bedroom, Available June 1, 2019</p>
+          <h3>Interested? Text (215) 880-7077</h3>
         </div>
       </div>
     </div>
     <div class="mobile-information">
       <h1>William Schoepe Properties</h1>
-      <p>Property at 4002 Spruce Street</p>
-      <p>7 Bedroom, Available June 1st</p>
-      <p>Contact: Text 215-880-7077</p>
+      <p>4002 Spruce Street</p>
+      <p>7 Bedroom, Available June 1, 2019</p>
+      <h3>Interested?</h3>
+      <h3>Text (215) 880-7077</h3>
     </div>
   </body>
 </html>
