--- a/clients/william-schoepe-properties/index.html
+++ b/clients/william-schoepe-properties/index.html
@@ -2,11 +2,33 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>William Schoepe Properties</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>William Schoepe Properties</title>
+
+    <meta property="og:title" content="William Schoepe Properties">
+    <meta property="og:image" content="https://snworksceo.imgix.net/dpn/6afab2c0-de8d-4f05-a57f-db81c384e0c3.sized-1000x1000.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://projects.thedp.com/clients/william-schoepe-properties/">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="William Schoepe Properties">
+    <meta name="twitter:image" content="https://snworksceo.imgix.net/dpn/6afab2c0-de8d-4f05-a57f-db81c384e0c3.sized-1000x1000.png">
+    <meta name="twitter:url" content="https://projects.thedp.com/clients/william-schoepe-properties/">
+
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-707447-4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-707447-4');
+    </script>
+
     <div class="container">
       <div class="inner-container">
         <div class="title-box">
