--- a/clients/william-schoepe-properties/index.html
+++ b/clients/william-schoepe-properties/index.html
@@ -7,13 +7,13 @@
     <title>William Schoepe Properties</title>
 
     <meta property="og:title" content="William Schoepe Properties">
-    <meta property="og:image" content="https://snworksceo.imgix.net/dpn/6afab2c0-de8d-4f05-a57f-db81c384e0c3.sized-1000x1000.png">
+    <meta property="og:image" content="https://snworksceo.imgix.net/dpn/120078a5-e00e-45a1-92f4-56743ad95825.sized-1000x1000.jpg">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://projects.thedp.com/clients/william-schoepe-properties/">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="William Schoepe Properties">
-    <meta name="twitter:image" content="https://snworksceo.imgix.net/dpn/6afab2c0-de8d-4f05-a57f-db81c384e0c3.sized-1000x1000.png">
+    <meta name="twitter:image" content="https://snworksceo.imgix.net/dpn/120078a5-e00e-45a1-92f4-56743ad95825.sized-1000x1000.jpg">
     <meta name="twitter:url" content="https://projects.thedp.com/clients/william-schoepe-properties/">
 
     <link rel="stylesheet" href="style.css">
