clean up styling, header, and footer; add multimedia content

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
       <h1>DP Projects &amp; Guides</h1>
 
       <div class="welcome">
-        Welcome to The Daily Pennsylvanian's Projects page! This site showcases the work done by the DP's web development team, such as project pages for special issues or standalone interactives.
+        <p>Welcome to The Daily Pennsylvanian's Projects page! This site showcases the work done by the DP's web development team, such as project pages for special issues or standalone interactives.</p>
+        <p><a href="https://projects.34st.com" target="_blank">34th Street Magazine</a> and <a href="https://projects.underthebutton.com" target="_blank">Under the Button</a> have their own project pages. Check them out for more of their content!</p>
       </div>
 
       <hr>
