--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <center>
         <a href="https://www.thedp.com">
-          <img src="https://s3.amazonaws.com/media.dpn/56240_dpwordmark750o.png" alt="The Daily Pennsylvanian" width="250">
+          <img src="https://snworksceo.imgix.net/dpn/aa058626-f082-47a5-9191-86c645d2986b.sized-1000x1000.png" alt="The Daily Pennsylvanian" width="250">
         </a>
       </center>
     </nav>
