--- a/clients/william-schoepe-properties/index.html
+++ b/clients/william-schoepe-properties/index.html
@@ -33,17 +33,18 @@
       <div class="inner-container">
         <div class="title-box">
           <h1>William Schoepe Properties</h1>
-          <p>4002 Spruce Street</p>
-          <p>7 Bedroom, Available June 1, 2019</p>
-          <h3>Interested? Text (215) 880-7077</h3>
+          <p>40th & Spruce</p>
+          <p>10+ bedroom, 5 bath</p>
+          <h3>House Available</h3>
+          <h3>Text (215) 880-7077</h3>
         </div>
       </div>
     </div>
     <div class="mobile-information">
       <h1>William Schoepe Properties</h1>
-      <p>4002 Spruce Street</p>
-      <p>7 Bedroom, Available June 1, 2019</p>
-      <h3>Interested?</h3>
+      <p>40th & Spruce</p>
+      <p>10+ bedroom, 5 bath</p>
+      <h3>House Available</h3>
       <h3>Text (215) 880-7077</h3>
     </div>
   </body>
